--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "css/bootstrap.min.css">
+    <link rel = "stylesheet" href = "css/styles.css">
 
 
 
@@ -27,20 +29,16 @@
                 This is a regular paragraph. It doesn't stand out.
             </p>
 
-            <button type="button" class="btn btn-primary">primary button</button>
-
-            <hr>
-
-            <img src="images/shoes.jpg" class="img-fluid" alt="...">
-
-
-
-
+    
         </div>
 
 
 
 
     </body>
+
+    <main>
+
+    </main>
 
 </html>
