--- a/index.html
+++ b/index.html
@@ -10,27 +10,50 @@
 
 
 
-    <title>I AM SETTING UP BOOTSTRAP. HUZZAH!</title>
+    <title>Cit-E Riders</title>
 
 
 
 </head>
 
     <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Cit-E Riders Hire</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Pricing</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Locations</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Become a Member!</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Reserve a Bike</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          View More
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <li><a class="dropdown-item" href="#">How we work</a></li>
+                          <li><a class="dropdown-item" href="#">Contact us</a></li>
+                          <li><a class="dropdown-item" href="#">Our Socials</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+        </header>
 
-        <div class="container">
-            <h1 class="display-1">This is my bootstrap set up. Did I do it right?</h1>
-
-            <p class="lead">
-                This is a lead paragraph. It stands out from regular paragraphs.
-            </p>
-
-            <p>
-                This is a regular paragraph. It doesn't stand out.
-            </p>
-
-    
-        </div>
 
 
 
