--- a/index.html
+++ b/index.html
@@ -55,13 +55,58 @@
         </header>
 
 
+        <main>
+            <div class="container py-3">
+                <h1 class="display-1 text center" style="font-size: large;"><u>Our Photos:</u></h1>
+            </div>
+            <!--carousel start-->
+            <div class="carousel">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="images/bike 1.jpg" class="d-block w-100" alt="0">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/bike 2.jpg" class="d-block w-100" alt="1">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/bike 3.jpg" class="d-block w-100" alt="2">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/bike 4.jpg" class="d-block w-100" alt="3">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/bike 5.jpg" class="d-block w-100" alt="4">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/bike 6.jpg" class="d-block w-100" alt="5">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+            <!--carousel end-->
+    
+        </main>
 
-
-
+        <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
     </body>
 
-    <main>
-
-    </main>
 
 </html>
