--- a/index.html
+++ b/index.html
@@ -100,8 +100,26 @@
                     </button>
                   </div>
             </div>
+
+            <p>
+              
+            </p>
             <!--carousel end-->
-    
+            <!--Become a member now!-->
+            <div class="card text-center">
+              <div class="card-header">
+                Featured
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+              <div class="card-footer text-muted">
+                2 days ago
+              </div>
+            </div>
+            <!--end of become a member now!-->
         </main>
 
         <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
