--- a/index.html
+++ b/index.html
@@ -105,17 +105,31 @@
 
             </p>
             <!--carousel end-->
-            <!--About us scrolling section-->
-            
+            <!--About us scrolling section
+            <nav id="navbar-example2" class="navbar navbar-dark bg-dark px-3">
+              <a class="navbar-brand" href="#">Learn more about Cit-E Riders:</a>
+              <ul class="nav nav-pills">
+                <li class="nav-item">
+                  <a class="nav-link" href="#scrollspyHeading1">About us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#scrollspyHeading2">Future Plans</a>
+                </li>
+              </ul>
+            </nav>
             <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-              <h4 id="scrollspyHeading1">First heading</h4>
-              <p>...</p>
-              <h4 id="scrollspyHeading2">Second heading</h4>
-              <p>...</p>
-              <h4 id="scrollspyHeading3">Third heading</h4>
-              <p>...</p>
+              <h4 id="scrollspyHeading1">About Us</h4>
+              <p id="aboutus">We are a tight-knit company, focused on furthering the improvement of the environment. The inclusion of a bike hire service throughout multiple different cities around the country, will minimise the use of cars and therefore minimise the amount of pollution in the air. Our little business was first founded back in 2017, with minimal help and advertising we were able to reach this point and we hope you will join us for the rest of our journey!</p>
+              <h4 id="scrollspyHeading2">Future Plans</h4>
+              <p>As a company we hope to expand further out to many other cities in our plans to make travel much more eco-friendly. </p>
+              <h4 id="scrollspyHeading3">What can YOU do?</h4>
+              <p>...</p> 
+
             </div>
-            <!--END of About us scrolling section-->
+            END of About us scrolling section-->
+            <!--MAP-->
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1i_WcPI8bHBld5fbhgLFnJrnoT3qbeMZ7&ehbc=2E312F" width="640" height="500"></iframe>
+            <!--END OF MAP-->
             <!--Become a member now!-->
             <div class="card text-center">
               
