--- a/index.html
+++ b/index.html
@@ -2,110 +2,120 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "css/bootstrap.min.css">
-    <link rel = "stylesheet" href = "css/styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
 
 
 
-    <title>Cit-E Riders</title>
+  <title>Cit-E Riders</title>
 
 
 
 </head>
 
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Cit-E Riders Hire</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Pricing</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Locations</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Become a Member!</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Reserve a Bike</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          View More
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item" href="#">How we work</a></li>
-                          <li><a class="dropdown-item" href="#">Contact us</a></li>
-                          <li><a class="dropdown-item" href="#">Our Socials</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-        </header>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Cit-E Riders Hire</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Locations</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Become a Member!</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Reserve a Bike</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                View More
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">How we work</a></li>
+                <li><a class="dropdown-item" href="#">Contact us</a></li>
+                <li><a class="dropdown-item" href="#">Our Socials</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
 
-        <main>
-            <div class="container py-3">
-                <h1 class="display-1 text center" style="font-size: large;"><u>Our Photos:</u></h1>
-            </div>
-            <!--carousel start-->
-            <div class="carousel">
-                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-                    </div>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="images/bike 1.jpg" class="d-block w-100" alt="0">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/bike 2.jpg" class="d-block w-100" alt="1">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/bike 3.jpg" class="d-block w-100" alt="2">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/bike 4.jpg" class="d-block w-100" alt="3">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/bike 5.jpg" class="d-block w-100" alt="4">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/bike 6.jpg" class="d-block w-100" alt="5">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-            </div>
+  <main>
+    <div class="container py-3">
+      <h1 class="display-1 text center" style="font-size: large;"><u>Our Photos:</u></h1>
+    </div>
+    <!--carousel start-->
+    <div class="carousel">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+            aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+            aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+            aria-label="Slide 6"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/bike 1.jpg" class="d-block w-100" alt="0">
+          </div>
+          <div class="carousel-item">
+            <img src="images/bike 2.jpg" class="d-block w-100" alt="1">
+          </div>
+          <div class="carousel-item">
+            <img src="images/bike 3.jpg" class="d-block w-100" alt="2">
+          </div>
+          <div class="carousel-item">
+            <img src="images/bike 4.jpg" class="d-block w-100" alt="3">
+          </div>
+          <div class="carousel-item">
+            <img src="images/bike 5.jpg" class="d-block w-100" alt="4">
+          </div>
+          <div class="carousel-item">
+            <img src="images/bike 6.jpg" class="d-block w-100" alt="5">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
 
-            <p>
+    <p>
 
-            </p>
-            <!--carousel end-->
-            <!--About us scrolling section
+    </p>
+    <!--carousel end-->
+    <!--About us scrolling section
             <nav id="navbar-example2" class="navbar navbar-dark bg-dark px-3">
               <a class="navbar-brand" href="#">Learn more about Cit-E Riders:</a>
               <ul class="nav nav-pills">
@@ -127,26 +137,44 @@
 
             </div>
             END of About us scrolling section-->
-            <!--MAP-->
-            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1i_WcPI8bHBld5fbhgLFnJrnoT3qbeMZ7&ehbc=2E312F" width="640" height="500"></iframe>
-            <!--END OF MAP-->
-            <!--Become a member now!-->
-            <div class="card text-center">
-              
-              <div class="card-body">
-                <h5 class="card-title">Become A <u>Member</u> Now!</h5>
-                <p class="card-text">Join Us & have access to your own <strong>Membership Perks</strong></p>
-                <a href="#" class="btn btn-primary">[Join Here]</a>
-              </div>
-                
-              </div>
-            </div>
-            <!--end of become a member now!-->
-        </main>
+    <!--MAP-->
+    <section id="map">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-6 col-md-6 col-lg-6"></div>
+          <div class="col-6 col-md-6 col-lg-6">
+            <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>WHERE ARE WE?</u></h3>
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1i_WcPI8bHBld5fbhgLFnJrnoT3qbeMZ7&ehbc=2E312F"
+              width="100%" height="600"></iframe>
+          </div>
+        </div>
+      </div>
+      <!--
+              <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>WHERE ARE WE?</u></h3>
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1i_WcPI8bHBld5fbhgLFnJrnoT3qbeMZ7&ehbc=2E312F" width="800" height="600"></iframe>
+              -->
+    </section>
+    <!--END OF MAP-->
+    <!--Become a member now!-->
+    <div class="container-fluid">
+      <div class="col-12 col-md-12 col-lg-12">
+        <div class="card text-center">
 
-        <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-    </body>
+          <div class="card-body">
+            <h5 class="card-title">Become A <u>Member</u> Now!</h5>
+            <p class="card-text">Join Us & have access to your own <strong>Membership Perks</strong></p>
+            <a href="#" class="btn btn-primary">[Join Here]</a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!--end of become a member now!-->
+  </main>
+
+  <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+</body>
 
 
 </html>
