about us section

--- a/index.html
+++ b/index.html
@@ -115,28 +115,57 @@
 
     </p>
     <!--carousel end-->
-    <!--About us scrolling section
-            <nav id="navbar-example2" class="navbar navbar-dark bg-dark px-3">
-              <a class="navbar-brand" href="#">Learn more about Cit-E Riders:</a>
-              <ul class="nav nav-pills">
-                <li class="nav-item">
-                  <a class="nav-link" href="#scrollspyHeading1">About us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#scrollspyHeading2">Future Plans</a>
-                </li>
-              </ul>
-            </nav>
-            <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-              <h4 id="scrollspyHeading1">About Us</h4>
-              <p id="aboutus">We are a tight-knit company, focused on furthering the improvement of the environment. The inclusion of a bike hire service throughout multiple different cities around the country, will minimise the use of cars and therefore minimise the amount of pollution in the air. Our little business was first founded back in 2017, with minimal help and advertising we were able to reach this point and we hope you will join us for the rest of our journey!</p>
-              <h4 id="scrollspyHeading2">Future Plans</h4>
-              <p>As a company we hope to expand further out to many other cities in our plans to make travel much more eco-friendly. </p>
-              <h4 id="scrollspyHeading3">What can YOU do?</h4>
-              <p>...</p> 
+    <!--About us section-->
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item" style="background-color:rgb(205, 245, 183);">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+            aria-expanded="true" aria-controls="collapseOne" style="background-color:rgb(205, 245, 183);">
+            About Us:
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+          data-bs-parent="#accordionExample">
+          <div class="accordion-body" style="color: rgb(39, 7, 96)">
+            We are a tight-knit company, <strong>focused on furthering the improvement of the environment.</strong> The inclusion of a bike hire service throughout multiple different cities around the country, will minimise the use of cars and therefore <strong> minimise the amount of pollution </strong>in the air. Our little business was first founded back in 2017, with minimal help and advertising we were able to reach this point and we hope you will <strong> join us for the rest of our journey!</strong>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item" style="background-color:rgb(175, 209, 157);" >
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="background-color:rgb(175, 209, 157);">
+            Future Plans:
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+          data-bs-parent="#accordionExample">
+          <div class="accordion-body"style="color: rgb(39, 7, 96)">
+            Throughout the making of our business, <strong> our main aim has always been to limit the amount of pollution in the city air.</strong> We hope that in the future we will be able to expand into other more densely populated cities to try and help the traffic and pollution problems.<strong> We hope to make our services even easier to use</strong> and to eventually add a tracking feature so that you can’t lose or misplace your bike. We also want to spread our work to charity organisations, places who can help us use the money we raise as a way to help the environment.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item" style="background-color:rgb(154, 172, 144);">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="background-color:rgb(177, 194, 168);">
+            What can YOU do?
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+          data-bs-parent="#accordionExample">
+          <div class="accordion-body"style="color: rgb(39, 7, 96)">
+            <strong> Visit our Instagram page to keep up to date with us and to donate to our collaborative charity pages.</strong> 
+            We also hope that you will reccommend our bike hire to your friends and family to try and spread the word
+            about how to help the evironment and prevent being stuck in traffic.
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--END of About us section-->
+    <p>
 
-            </div>
-            END of About us scrolling section-->
+    </p>
     <!--MAP-->
     <section id="map">
       <div class="container-fluid">
