--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Cit-E Riders Hire</a>
+        <a class="navbar-brand" href="#">
+          <img src="images/logo.png" alt="logo" width="115" height="70">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -45,7 +47,6 @@
                 View More
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">How we work</a></li>
                 <li><a class="dropdown-item" href="#">Contact us</a></li>
                 <li><a class="dropdown-item" href="#">Our Socials</a></li>
               </ul>
@@ -116,7 +117,7 @@
     </p>
     <!--carousel end-->
     <!--About us section-->
-    <div class="accordion" id="accordionExample">
+    <div class="accordion py-4" id="accordionExample">
       <div class="accordion-item" style="background-color:rgb(205, 245, 183);">
         <h2 class="accordion-header" id="headingOne">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
@@ -127,35 +128,47 @@
         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
           data-bs-parent="#accordionExample">
           <div class="accordion-body" style="color: rgb(39, 7, 96)">
-            We are a tight-knit company, <strong>focused on furthering the improvement of the environment.</strong> The inclusion of a bike hire service throughout multiple different cities around the country, will minimise the use of cars and therefore <strong> minimise the amount of pollution </strong>in the air. Our little business was first founded back in 2017, with minimal help and advertising we were able to reach this point and we hope you will <strong> join us for the rest of our journey!</strong>
+            We are a tight-knit company, <strong>focused on furthering the improvement of the environment.</strong> The
+            inclusion of a bike hire service throughout multiple different cities around the country, will minimise the
+            use of cars and therefore <strong> minimise the amount of pollution </strong>in the air. Our little business
+            was first founded back in 2017, with minimal help and advertising we were able to reach this point and we
+            hope you will <strong> join us for the rest of our journey!</strong>
           </div>
         </div>
       </div>
-      <div class="accordion-item" style="background-color:rgb(175, 209, 157);" >
+      <div class="accordion-item" style="background-color:rgb(175, 209, 157);">
         <h2 class="accordion-header" id="headingTwo">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="background-color:rgb(175, 209, 157);">
+            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"
+            style="background-color:rgb(175, 209, 157);">
             Future Plans:
           </button>
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
           data-bs-parent="#accordionExample">
-          <div class="accordion-body"style="color: rgb(39, 7, 96)">
-            Throughout the making of our business, <strong> our main aim has always been to limit the amount of pollution in the city air.</strong> We hope that in the future we will be able to expand into other more densely populated cities to try and help the traffic and pollution problems.<strong> We hope to make our services even easier to use</strong> and to eventually add a tracking feature so that you can’t lose or misplace your bike. We also want to spread our work to charity organisations, places who can help us use the money we raise as a way to help the environment.
+          <div class="accordion-body" style="color: rgb(39, 7, 96)">
+            Throughout the making of our business, <strong> our main aim has always been to limit the amount of
+              pollution in the city air.</strong> We hope that in the future we will be able to expand into other more
+            densely populated cities to try and help the traffic and pollution problems.<strong> We hope to make our
+              services even easier to use</strong> and to eventually add a tracking feature so that you can’t lose or
+            misplace your bike. We also want to spread our work to charity organisations, places who can help us use the
+            money we raise as a way to help the environment.
           </div>
         </div>
       </div>
       <div class="accordion-item" style="background-color:rgb(154, 172, 144);">
         <h2 class="accordion-header" id="headingThree">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="background-color:rgb(177, 194, 168);">
+            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"
+            style="background-color:rgb(177, 194, 168);">
             What can YOU do?
           </button>
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
           data-bs-parent="#accordionExample">
-          <div class="accordion-body"style="color: rgb(39, 7, 96)">
-            <strong> Visit our Instagram page to keep up to date with us and to donate to our collaborative charity pages.</strong> 
+          <div class="accordion-body" style="color: rgb(39, 7, 96)">
+            <strong> Visit our Instagram page to keep up to date with us and to donate to our collaborative charity
+              pages.</strong>
             We also hope that you will reccommend our bike hire to your friends and family to try and spread the word
             about how to help the evironment and prevent being stuck in traffic.
           </div>
@@ -168,22 +181,68 @@
     </p>
     <!--MAP-->
     <section id="map">
-      <div class="container-fluid">
+      <div class="container py-1">
         <div class="row">
-          <div class="col-6 col-md-6 col-lg-6"></div>
-          <div class="col-6 col-md-6 col-lg-6">
+          <div class="col-12 col-md-6 col-lg-6">
+            <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>HOW WE WORK</u></h3>
+            <br>
+            <p class="steps" style="color: white;">
+              [1] <mark>Join Us!</mark>/Make an account with us
+            </p>
+            <br>
+            <p class="steps"style="color: white;">
+              [2] Using our website, <mark>reserve your bike</mark>
+            </p>
+            <br>
+            <p class="steps" style="color: white;">
+              [3] <mark>Travel</mark> to your selected bike station 
+            </p>
+            <br>
+            <p class="steps" style="color: white;">
+              [4] <mark>Unlock the bike using the code</mark> sent in confirmation email
+            </p>
+            <br>
+            <p class="steps" style="color: white;">
+              [5] <mark>Enjoy</mark> your traffic free and eco-friendly day!
+            </p>
+            <br>
+            <p class="steps" style="color: white;">
+              [6] <mark>Return the bike safely</mark> and in neat condition to station
+            </p>
+          </div>
+          <div class="col-12 col-md-6 col-lg-6">
             <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>WHERE ARE WE?</u></h3>
             <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1i_WcPI8bHBld5fbhgLFnJrnoT3qbeMZ7&ehbc=2E312F"
-              width="100%" height="600"></iframe>
+              width="100%" height="500"></iframe>
           </div>
         </div>
       </div>
-      <!--
-              <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>WHERE ARE WE?</u></h3>
-            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1i_WcPI8bHBld5fbhgLFnJrnoT3qbeMZ7&ehbc=2E312F" width="800" height="600"></iframe>
-              -->
     </section>
     <!--END OF MAP-->
+    <br>
+    <!-- PRICING -->
+    <div class="container py-1">
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-6">
+          <img src="images/bike 1.jpg" width="100%" alt="placeholder">
+        </div>
+        <div class="col-12 col-md-6 col-lg-6">
+          <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>PRICING</u></h3>
+          <p style="color: white;">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dignissim lectus semper rhoncus laoreet.
+            Donec
+            non ex aliquet, molestie tortor mollis, sollicitudin justo. Sed bibendum interdum nibh, nec ultricies mauris
+            interdum sit amet. Aenean sagittis ut lorem ac tincidunt. Nulla finibus dolor nisi, at lobortis augue
+            lacinia
+            vel. Nunc egestas eu urna id elementum. In hac habitasse platea dictumst. Phasellus eleifend massa eget nisi
+            luctus, malesuada lobortis velit dictum. Sed consequat sem nec nulla tincidunt viverra. Phasellus est nisi,
+            facilisis pellentesque finibus quis, aliquet eget ipsum.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- END OF PRICING -->
+
     <!--Become a member now!-->
     <div class="container-fluid">
       <div class="col-12 col-md-12 col-lg-12">
@@ -199,10 +258,56 @@
       </div>
     </div>
     <!--end of become a member now!-->
+    <!--reservation form-->
+
+    <!--end of reservation form-->
+    <!--contact us-->
+    <div class="container-fluid row">
+      <div class="col-md-4 col-lg-4"></div>
+      <div class="col-md-4 col-lg-4">
+        <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>Contact Us!</u></h3>
+        <label for="exampleFormControlInput1" class="form-label" style="color: white;"><u>Email address</u></label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="col-md-4 col-lg-4"></div>
+      <div class="col-md-4 col-lg-4"></div>
+      <div class="col-md-4 col-lg-4">
+        <label for="exampleFormControlTextarea1" class="form-label" style="color: white;"><u>Leave us a
+            Comment!</u></label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      <div class="col-md-4 col-lg-4"></div>
+    </div>
+    <!--no contact us-->
   </main>
+
+  <br>
+
+  <footer class="container py-1">
+    <div class="row pt-1 pb-1 fixed bottom bg-dark">
+      <div class="col-4 col-md-4 col-lg-4">
+        <a href="" target="_blank">
+          <img class="socials" src="">
+        </a>
+      </div>
+      <div class="col-4 col-md-4 col-lg-4">
+        <a href="" target="_blank">
+          <img class="socials" src="">
+        </a>
+      </div>
+      <div class="col-4 col-md-4 col-lg-4">
+        <a href="" target="_blank">
+          <img class="socials" src="">
+        </a>
+      </div>
+    </div>
+  </footer>
+
 
   <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+
+
 </body>
 
 
