--- a/index.html
+++ b/index.html
@@ -287,17 +287,17 @@
     <div class="row pt-1 pb-1 fixed bottom bg-dark">
       <div class="col-4 col-md-4 col-lg-4">
         <a href="" target="_blank">
-          <img class="socials" src="">
+          <img class="socials" src="images/fb.png">
         </a>
       </div>
       <div class="col-4 col-md-4 col-lg-4">
         <a href="" target="_blank">
-          <img class="socials" src="">
+          <img class="socials" src="images/ig.png">
         </a>
       </div>
       <div class="col-4 col-md-4 col-lg-4">
         <a href="" target="_blank">
-          <img class="socials" src="">
+          <img class="socials" src="images/twitter.png">
         </a>
       </div>
     </div>
