--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="images/logo.png" alt="logo" width="115" height="70">
+          <img src="images/logo.png" alt="logo" width="120" height="78">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -224,19 +224,12 @@
     <div class="container py-1">
       <div class="row">
         <div class="col-12 col-md-6 col-lg-6">
-          <img src="images/bike 1.jpg" width="100%" alt="placeholder">
+          <img src="images/cbuni.jpg" width="100%" alt="placeholder">
         </div>
         <div class="col-12 col-md-6 col-lg-6">
           <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>PRICING</u></h3>
           <p style="color: white;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dignissim lectus semper rhoncus laoreet.
-            Donec
-            non ex aliquet, molestie tortor mollis, sollicitudin justo. Sed bibendum interdum nibh, nec ultricies mauris
-            interdum sit amet. Aenean sagittis ut lorem ac tincidunt. Nulla finibus dolor nisi, at lobortis augue
-            lacinia
-            vel. Nunc egestas eu urna id elementum. In hac habitasse platea dictumst. Phasellus eleifend massa eget nisi
-            luctus, malesuada lobortis velit dictum. Sed consequat sem nec nulla tincidunt viverra. Phasellus est nisi,
-            facilisis pellentesque finibus quis, aliquet eget ipsum.
+            
           </p>
         </div>
       </div>
