--- a/index.html
+++ b/index.html
@@ -227,10 +227,26 @@
           <img src="images/cbuni.jpg" width="100%" alt="placeholder">
         </div>
         <div class="col-12 col-md-6 col-lg-6">
+          <br>
+          <br>
           <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>PRICING</u></h3>
-          <p style="color: white;">
-            
+          <br>
+          <p class="steps" style="color: white;">
+            <strong>£3.25</strong> Single Trip (One-way trip) 
           </p>
+          <br>
+          <p class="steps"style="color: white;">
+            <strong>£7.00</strong> Day Pass (24-hour access)
+          </p>
+          <br>
+          <p class="steps" style="color: white;">
+            <strong>£15.00</strong> 3-Day Pass (72-hour access)
+          </p>
+          <br>
+          <p class="steps" style="color: white;">
+           <strong><u>OVERAGE FEES:</u></strong> £4 FOR EVERY EXTRA 30 MINUTES!!
+          </p>
+          <br>
         </div>
       </div>
     </div>
