--- a/index.html
+++ b/index.html
@@ -228,7 +228,6 @@
         </div>
         <div class="col-12 col-md-6 col-lg-6">
           <br>
-          <br>
           <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>PRICING</u></h3>
           <br>
           <p class="steps" style="color: white;">
@@ -247,6 +246,9 @@
            <strong><u>OVERAGE FEES:</u></strong> £4 FOR EVERY EXTRA 30 MINUTES!!
           </p>
           <br>
+          <p class="link" style="color: white;">
+            Information and overage fee table can be found from <u><url>https://bikesharetoronto.com/pricing/<url></u>
+           </p>
         </div>
       </div>
     </div>
