--- a/index.html
+++ b/index.html
@@ -278,7 +278,18 @@
     <br>
     <!-- END OF PRICING -->
     <!--reservation form-->
-    
+    <form>
+      <div class="signup-form bg-dark">
+      <div class="signup-head bg-dark" style="color: white;">
+        <h6>Reserve Your Bike Here:</h6>
+      </div>
+
+      <div class="signup-content">
+        <input type="radio" class="radio" name="r">
+        <input type="radio" class="radio" name="r">
+      </div>
+    </div>
+    </form>
     <!--end of reservation form-->
     <!--member perks-->
     <div class="container-fluid" id="Member">
