--- a/index.html
+++ b/index.html
@@ -286,7 +286,11 @@
 
       <div class="signup-content">
         <input type="radio" class="radio" name="r">
+        <label class="text-white">Single Trip</label>
         <input type="radio" class="radio" name="r">
+        <label class="text-white">Day Trip</label>
+        <input type="radio" class="radio" name="r">
+        <label class="text-white">3 Day Hire</label>
       </div>
     </div>
     </form>
@@ -317,6 +321,11 @@
                   <p>
                   <em>*The first 30 minutes of each ride are included in the membership. After 30 minutes extra usage fees apply, see Overage Fees below.</em>
                     </p>
+                    <a href="https://bikesharetoronto.com/pricing/" target="_blank">
+                      <p class="link" style="color: rgb(0, 0, 0);">
+                        <u>https://bikesharetoronto.com/pricing/</u>
+                      </p>
+                    </a>
                     <br>
             <a href="#" class="btn btn-primary">JOIN NOW!</a>
           </div>
