--- a/index.html
+++ b/index.html
@@ -279,6 +279,8 @@
     <!-- END OF PRICING -->
     <!--reservation form-->
     <form>
+      <div class="container-fluid" id="form">
+        <div class="col-12 col-md-12 col-lg-12">
       <div class="signup-form bg-dark">
       <div class="signup-head bg-dark" style="color: white;">
         <h6>Reserve Your Bike Here:</h6>
@@ -292,6 +294,14 @@
         <input type="radio" class="radio" name="r">
         <label class="text-white">3 Day Hire</label>
       </div>
+
+      <div class="signup-content2">
+        <input type="text" placeholder="From" class="input bg-light">
+        <input type="text" placeholder="To" class="input bg-light">
+      </div>
+
+      <label class="text-white">Day of Hire</label>
+      <input type="date" class="doh">
     </div>
     </form>
     <!--end of reservation form-->
